<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".FlagMainActivity" >
    <Button android:id="@+id/b_nametoflag"
        android:text="@string/b_nametoflag_text"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_gravity="center"/>
     <Button android:id="@+id/b_flagtoname"
        android:text="@string/b_flagtoname_text"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="15dp"/>
     <Button android:id="@+id/b_list"
        android:text="@string/b_list_text"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="45dp"/>
     <Button android:id="@+id/b_settings"
        android:text="@string/b_settings_text"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="15dp"/>
</LinearLayout>
