<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background_gray"
  android:orientation="vertical" >
  <TextView android:text="@string/tv_end_score"
    android:textSize="25sp"
    android:textColor="#D4A017"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="15dp"/>
  <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:weightSum="1">
    <TextView android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:text="@string/tv_end_correct"
      android:textColor="#5FFB17"
      android:gravity="center"
      android:layout_weight=".5"/>
    <TextView android:id="@+id/tv_end_correct"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textColor="#5FFB17"
      android:layout_width="0dp"
      android:layout_weight=".5"/>
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:weightSum="1">
    <TextView android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:text="@string/tv_end_wrong"
      android:gravity="center"
      android:textColor="#F70D1A"
      android:layout_weight=".5"/>
    <TextView android:id="@+id/tv_end_wrong"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textColor="#F70D1A"
      android:layout_width="0dp"
      android:layout_weight=".5"/>
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:weightSum="1">
    <TextView android:layout_height="wrap_content"
      android:layout_width="0dp"
      android:gravity="center"
      android:text="@string/tv_end_total"
      android:textColor="#D4A017"
      android:layout_weight=".5"/>
    <TextView android:id="@+id/tv_end_total"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textColor="#D4A017"
      android:layout_width="0dp"
      android:layout_weight=".5"/>
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:padding="5dp"
    android:weightSum="1">
    <Button android:id="@+id/b_end_menu"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/b_end_menu"
      android:layout_weight=".5"/>
    <Button android:id="@+id/b_end_review"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/b_end_review"
      android:layout_weight=".5"/>
  </LinearLayout>
</LinearLayout>
